# ori-api

./: .gitignore  Cargo.toml  Dockerfile  compose.yaml  dockerfile
.github/workflows/: deploy.yaml
.sqlx/: query-7362459a85161d2ecca26b35d7298b4e35bae2b38d2ab9c2ce5dd8f4f89e2c7c.json
migrations/: 20260619183057_create_sentences_table.down.sql  20260619183057_create_sentences_table.up.sql
src/: batadase.db  main.rs  models.rs
