[package]
name = "ori-api"
version = "1.0.0"
rust-version = "1.96.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
