[package]
name = "ori-api"
version = "1.0.0"
rust-version = "1.96.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.9", features = [ "runtime-tokio", "tls-rustls-ring-webpki", "mysql", "chrono", "uuid" ] }
dotenv = "0.15.0"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
arc = "0.0.1"
